# LanguageRevamp

./: .gitignore  Cargo.toml  README.md
.github/: labeler.yml  laberer.yml
.github/workflows/: label.yml
src/: cli.rs  main.rs
src/go/: check.rs  cli.rs  mod.rs  update.rs
src/java/: check.rs  cli.rs  mod.rs  update.rs
src/nodejs/: check.rs  cli.rs  update.rs
src/python/: check.rs  cli.rs  mod.rs  update.rs
src/rust/: check.rs  cli.rs  mod.rs  update.rs
src/utils/: mod.rs  system.rs  version.rs
