[package]
name = "LanguageRevamp"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Dokuqui/LanguageRevamp"
description = "Language Revamp is a cross-platform CLI tool for managing programming language installations and updates."

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
which = "7.0.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
serde = "1.0.217"
