[package]
name = "LanguageRevamp"
version = "1.0.0"
edition = "2024"
description = "CLI unified tool to check, update, install programming languages."
license = "MIT"
repository = "https://github.com/Dokuqui/LanguageRevamp"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
which = "7.0.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
select = "0.6.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
serde = "1.0.217"
